--- a/Data-Processing/README.Rmd
+++ b/Data-Processing/README.Rmd
@@ -9,4 +9,4 @@ output:
 
 ## Description of the Proposal Folder
 
-This folder contains the proposal for our project, both as a [.md file](Proposal.md) and as a [.Rmd file](Proposal.Rmd). Please refer to the proposal for more information.
+This folder contains the necessary data cleaning and processing code.
