--- a/Proposal/Proposal.Rmd
+++ b/Proposal/Proposal.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Data Visualization Project 2 Proposal"
-author: "Peewee Marten (Anshuman Pal, Konrat Pekkip)"
+author: "Peewee Marten (Anshuman Pal, Konrat Pekkip, Ryan Mazur)"
 output: 
   github_document:
     toc: true
@@ -8,43 +8,116 @@ output:
 ---
 
 # Comparing Fluctuations in Performances among Men and Women in Professional Tennis
+- Table of Contents
+    - [Introduction](#introduction)
+    - [Goal and Motivation](#goal-and-motivation)
+    - [Data](#data)
+    - [Research Questions](#research-questions)
+    - [Shiny App](#shiny-app)
+    - [Plan of Attach](#plan-of-attack)
+    - [Repository Organization](#repository-organization)
 
-In this data visualization project, we are interested in gaining a better understanding of trends and fluctuations in professional Tennis over the years. To accomplish this, we plan on building a shiny app that lets users interactively explore the statistics and historical trajectories of professional Tennis.
+---
 
-## Goals
+## Introduction {#introduction}
 
-While neither Anshuman nor Konrat are particularly talented Tennis players, we are intrigued by the sport and the extensive data collection that followers and organizers of professional Tennis events have engaged in the last century. There is a vast amount of data available on ATP and WTA tournaments which we seek to make accessible by building a shiny app that lets users explore different dynamics underlying the data.
+In this data visualization project, we are interested in gaining a better understanding of trends and fluctuations in professional Tennis
+over the years. To accomplish this, we will analyse from the ATP (men) and WTA (women) tours for the past several decades. Furthermore, 
+we plan on building a shiny app that lets users interactively explore the evolution of these tennis statistics with time.
 
-### Data
+---
 
-The data we're using comes from Jeff Sackmann's GitHub page. In the [data folder](data), there are two folders, one containing the data for the [men's ATP](data/atp), and one containing the data for the [women's WTA](data/wta). Both folders contain separate .csv files for matches (by year, starting in 1968/1980 for ATP and WTA, respectively) and rankings (by decade, starting in the 1970s/1980s for ATP and WTA, respectively). To learn more about the variables contained in the data as well as the contributors to the dataset, please refer to the README files. You can find the README file for the ATP data [here](data/atp/README.md), and the README file for the WTA data [here](data/wta/README.md).
+## Goal and Motivation {#goal-and-moitvation}
 
-### Research Question(s)
+The goal is to measure both long-term and short-term consistency in performance among professional men and women tennis players, 
+playing on the ATP and WTA tours resp. To measure consistency, we will measure fluctuations -- a statistically well-defined 
+quantity -- since less fluctuation means more consistency. Why do we study this?  
+  
+This is our contribution to the long-standing debate about performance discrepancies between men and women athletes. There was a parallel debate
+in the professional tennis world for a long time about whether men and women tennis players should get equal prize money. For example, it was only in 2007 that Wimbledon started offering equal money to men and women (see https://www.espn.com/tennis/story/_/id/24599816/us-open-follow-money-how-pay-gap-grand-slam-tennis-closed).  
+  
+One of the issues at hand in this debate is whether men and women athletes perform equally well. There are few objective ways of doing so. Measuring the most evident markers of performance, like race times in athletics and swimming, or number of points played and/or won in a tennis match, is not a very fruitful approach, since men and women are naturally built differently and have different physical abilities. So we thought of a tracking not the average performance (viz. a first-order variable), but fluctuations in the performance (viz., a second-order variable).
+  
+  
+For this, we will tap into the vast amount of data available on ATP and WTA tournaments. We will measure both long-term fluctuations and short-term fluctuations (see details below). We also seek to make this analysis accessible by building a shiny app that lets users explore different dynamics underlying the data.
 
-Question 1: Does the (long-term) fluctuation in rankings differ significantly between men and women?
+---
 
-Question 2: Does the (short-term) fluctuation in matches (measured by tracking average number of service breaks per match in a season) differ significantly between men and women?
+## Data {#data}
 
-The first question concerns long-term fluctuation in professional Tennis. A lot of Tennis players experience highs and lows, and very few constantly remain successul at the same level throughout their career. Based on our perception of the sport, we believe that such long-term fluctuation might be more pronounced in women's Tennis than men's Tennis.
+The data we’re using comes from Jeff Sackmann’s GitHub page. In the
+[data folder](data), there are two folders, one containing the data for
+the [men’s ATP](data/atp), and one containing the data for the [women’s
+WTA](data/wta). Both folders contain separate .csv files for matches (by
+year, starting in 1968/1980 for ATP and WTA, respectively) and rankings
+(by decade, starting in the 1970s/1980s for ATP and WTA, respectively).
+To learn more about the variables contained in the data as well as the
+contributors to the dataset, please refer to the README files. You can
+find the README file for the ATP data [here](data/atp/README.md), and
+the README file for the WTA data [here](data/wta/README.md).
 
-The second question concerns short-term fluctuations. By measuring the average number of service breaks per match in a season, we hope to see if there are significant differences in how men and women perform within given matches.
+---
 
-For both of these questions, we want to restrict our analysis to matches played since the year 2000, and focus on players who at some point entered the top-20 of their respective rankings.
+## Research Questions {#research-questions}
 
-## Plan of Attack
+**Question 1**: Do (long-term) fluctuations in rankings differ significantly between men and women?
 
-Week 1 (beginning May 2nd): Meet to brainstorm topics and potential visualization strategies.
+To address this, we will make a plot with time on the x-axis, and the fluctuation on the y-axis, one line for women and another for women. So it will show the time evolution of the fluctuations. The exact details will be determined later.
 
-Week 2: (beginning May 9th): Finalize the proposal and begin peer-review process.
+**Question 2:** Do (short-term) fluctuations in matches (measured by tracking average number of service breaks per match) differ significantly between men and women?
 
-Week 3: (beginning May 16th): Finalize peer-review process and incorporate peer-review edits into the project.
+Again, the plot will have time on the x-axis, and the fluctuation on the y-axis. Match data allows for access to more variables/dimensions. Thus, we could consider additional faceting over, say, match surface (clay, grass or hard courts).
 
-Week 4: (beginning May 23rd): Do the bulk of the coding work and finalize the write-up.
+**Details:**
+The first question concerns long-term fluctuation in professional
+Tennis. A lot of Tennis players experience highs and lows, and very few
+constantly remain successul at the same level throughout their career.
+Based on our perception of the sport, we believe that such long-term
+fluctuation might be more pronounced in women’s Tennis than men’s
+Tennis.
 
-Week 5: (beginning May 30th): Finalize the coding work and the presentation.
+The second question concerns short-term fluctuations. By measuring the
+average number of service breaks per match in a season, we hope to see
+if there are significant differences in how men and women perform within
+given matches.
 
-## Repository Organization
+For both of these questions, we want to restrict our analysis to the period between 1980 and today, and focus on players who at some point
+entered the top-20 or top-50 of their respective rankings.
 
-As it stands now, this repository contains several files and folders. This proposal exists in the [Proposal folder](Proposal), and our data, alongside more detailed information on the datasets, can be found in the [data folder](data). Eventually, the [Presentation folder](Presentation) will contain our presentation, while the [README file](README.md) in the main repository will contain the write-up of our results. Furthermore, depending on whether or not we will go through with the plan to build a shiny app, we might create another folder to store .Rmd files and R scripts relevant for our analysis.
+---
 
-The final organization of your project repository. This means describing the project organization in your proposal as well as implementing that organization in your repo. Create any folders needed and place a README.md in each folder explaining what goes in there.
+## Shiny App {#shiny-app}
+
+The Shiny app will be where users can view and interact with the data and plots generated to answer our research questions.  The structure of the app wil be comprised of two tabs; one for each research question.  Within each tab, there will be a plot displaying the underlying data along with a series of controls for the user to interact with in order to change the paramters for each plot.  While not finalized,
+we anticipate that these will consist of the ability to change the time window, filter for certain ranges of ranks among the players, and filter for the type of court (clay, grass, hard) that matches were played on.
+
+---
+
+## Plan of Attack {#plan-of-attack}
+
+Week 1 (beginning May 2nd): Meet to brainstorm topics and potential
+visualization strategies.
+
+Week 2: (beginning May 9th): Finalize the proposal and begin peer-review
+process.
+
+Week 3: (beginning May 16th): Finalize peer-review process and
+incorporate peer-review edits into the project.
+
+Week 4: (beginning May 23rd): Do the bulk of the coding work and
+finalize the write-up.
+
+Week 5: (beginning May 30th): Finalize the coding work and the
+presentation.
+
+---
+
+## Repository Organization {#repository-organization}
+
+As it stands now, this repository contains several files and folders.
+This proposal exists in the [Proposal folder](Proposal), and our data,
+alongside more detailed information on the datasets, can be found in the
+[data folder](data). Eventually, the [Presentation folder](Presentation)
+will contain our presentation, while the [README file](README.md) in the
+main repository will contain the write-up of our results. Furthermore,
+all files related to the cleaning and processing of the source data will be in [Data-Processing](Data-Processing) and the shiny app source code will be in [App](App).
