--- a/homework-04.Rmd
+++ b/homework-04.Rmd
@@ -44,6 +44,32 @@ My name, Konrat, is unavailable in the dataset. This not particularly surprising
 
 Please refer to the [App.R file](app1/app.R).
 
+```{r test-chunk}
+#build static plot for first part
+  
+babydata_amended %>%
+  group_by(name) %>%
+  filter(name == "Emma") %>%
+       group_by(name, year) %>%
+       # draw the plot
+       ggplot(
+         mapping = aes(
+           x = year,
+           y = n,
+           group = name,
+           color = name
+         )
+       ) +
+       geom_line(size = 1) +
+       theme_minimal(base_size = 16) +
+       theme(legend.position = "bottom") +
+       labs(
+         x = "Year",
+         y = "Number of Babies Named {named_choices}",
+         color = "Name",
+         title = "Absolute Name Popularity over Time")
+```
+
 3.  **The styled app**
 
 ```{r label-me-3}
